2009-01-25  Russ Allbery  <rra@stanford.edu>

	* lib/Pod/Thread.pm (cmd_item): Don't treat =item 0 as a bullet.
	Also improve the coding style.
	* t/basic.t: New file.  Add test suite framework and test the
	=item 0 fix.

2008-11-12  Russ Allbery  <rra@stanford.edu>

	* VERSION: Pod::Thread 0.11 released.

	* lib/Pod/Thread.pm: Minor coding style updates: require Perl
	5.006 and use "our" instead of "use vars".

2008-04-15  Russ Allbery  <rra@stanford.edu>

	* VERSION: Pod::Thread 0.10 released.

	* lib/Pod/Thread.pm (cmd_head1): Clear IN_NAME at the first =head1
	that isn't NAME rather than leaving it set for the whole document.
	(contents): Interpolate each heading before adding it to the
	contents section.
	(navbar): Likewise before adding it to the navbar.

2002-09-15  Russ Allbery  <rra@stanford.edu>

	* VERSION: Pod::Thread 0.09 released.

	* lib/Pod/Thread.pm (preprocess_paragraph): Also escape square
	brackets using \entity.

	* VERSION: Pod::Thread 0.08 released.

	* lib/Pod/Thread.pm (seq_f): Tag with the class "file" for easier
	style sheet work.

	* lib/Pod/Thread.pm (cmd_over): Clear PENDING to allow for nested
	description lists.
	(cmd_back): Re-establish PENDING here if we were inside a nested
	list.

	* VERSION: Pod::Thread 0.07 released.

	* lib/Pod/Thread.pm (cmd_item): Only consider an =item tag to be a
	bullet when it's literally *, allowing *Z<> to mark an =item tag
	that's a literal asterisk.

	* lib/Pod/Thread.pm (textblock): Use \class instead of \p.
	(navbar): Likewise.
	(contents): Use \number instead of \packnumber.

	* scripts/pod2thread.PL: Use Pod::Usage for pod2usage.

2002-09-11  Russ Allbery  <rra@stanford.edu>

	* VERSION: Pod::Thread 0.06 released.

	* lib/Pod/Thread.pm (begin_pod): New function.  If title was set,
	output the header and title information right away.
	(verbatim): Make sure that verbatim blocks end with two newlines.
	(textblock): For NAME sections, use the id variable if set and