@@ -1,5 +1,8 @@
 2009-01-25  Russ Allbery  <rra@stanford.edu>
 
+	* lib/Pod/Thread.pm (output): Print saved whitespace to the thread
+	output as intended instead of to standard output.
+
 	* lib/Pod/Thread.pm (cmd_item): Don't treat =item 0 as a bullet.
 	Also improve the coding style.
 	* t/basic.t: New file.  Add test suite framework and test the
